we the best music

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6">
-					<buton class="btn btn-success" id="buton">click me!</buton>
+					<buton class="btn btn-success" id="buton">click me and you'll see the answer of life !</buton>
 				</div><!-- /col -->
 				<div class="col-md-6">
 					<div class="jumbotron bg-info">
-						<h2>Notez le tp</h2>
+						<h2>Mettre la meilleure note</h2>
 						<div id="scuare" class="progress-bar bg-warning progress-bar-striped">
 							<h1 id="title" class="d-flex justify-content-center" placeholder="0"></h1>
-						</div>						
+						</div>
 					</div>
 				</div><!-- /col -->
 			</div><!-- /row -->
